[gd_scene load_steps=5 format=3 uid="uid://dmebxpxceumv1"]

[ext_resource type="Script" path="res://Scenes/Cutscene3(Decision).gd" id="1_i452h"]
[ext_resource type="Texture2D" uid="uid://bmn3bake5hkvh" path="res://Scenes/redknighthelps.png" id="1_mxfce"]
[ext_resource type="Theme" uid="uid://ccv8olfqkyg2i" path="res://new_theme.tres" id="2_5smpk"]
[ext_resource type="FontFile" uid="uid://dckytxalrtc10" path="res://assets/brackeys_platformer_assets/fonts/PixelOperator8.ttf" id="3_gbyhf"]

[node name="Cutscene1" type="Node2D"]
script = ExtResource("1_i452h")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = 2.0
offset_top = 3.0
offset_right = 1151.0
offset_bottom = 647.0
texture = ExtResource("1_mxfce")
expand_mode = 2

[node name="Label1" type="RichTextLabel" parent="."]
visible = false
offset_left = 87.0
offset_top = 33.0
offset_right = 1027.0
offset_bottom = 169.0
theme = ExtResource("2_5smpk")
theme_override_fonts/normal_font = ExtResource("3_gbyhf")
text = "						
			
		The red knight runs to help his comrade, but makes a shocking
		realisation. The curse can only removed if someone else takes
		the curse instead. But taking the curse will surely kill him, but 
		if he doesn't his friend will die.

			"
tab_size = 5

[node name="Label2" type="RichTextLabel" parent="."]
offset_left = 353.0
offset_top = 45.0
offset_right = 734.0
offset_bottom = 181.0
theme = ExtResource("2_5smpk")
theme_override_fonts/normal_font = ExtResource("3_gbyhf")
text = "						
			
		So what do you do?

			"
tab_size = 5

[node name="ButtonA" type="Button" parent="Label2"]
layout_mode = 0
offset_left = 207.0
offset_top = 74.0
offset_right = 383.0
offset_bottom = 98.0
scale = Vector2(0.8, 0.8)
theme_override_fonts/font = ExtResource("3_gbyhf")
text = "-Save his life"

[node name="ButtonB" type="Button" parent="Label2"]
layout_mode = 0
offset_left = 25.0
offset_top = 78.0
offset_right = 195.0
offset_bottom = 102.0
scale = Vector2(0.8, 0.8)
theme_override_fonts/font = ExtResource("3_gbyhf")
text = "-Leave to die"
